[package]
name = "bevy_gaff"
version = "0.1.0"
edition = "2021"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.11"
bevy_xpbd_2d = { git = "https://github.com/jondolf/bevy_xpbd", features = ["enhanced-determinism"] }
bevy_matchbox = { version = "0.7", features = ["ggrs"] }
bevy_ggrs = "0.13"
bevy-inspector-egui = "0.19"
bytemuck = { version = "1.7", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
serde = "1"

# make glam operations deterministic
# see: https://github.com/bitshifter/glam-rs/discussions/388
glam = { version = "0.24", features = ["libm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Document",
  "Location", # for getting args from query string
] }
serde_qs = "0.12"
# wasm-bindgen = "0.2"
bevy_ggrs = { version = "0.13", features = ["wasm-bindgen"] }

[profile.dev]
opt-level = 2 # Use slightly better optimization, so examples work